react.ts Added Bootstrap Icons with custom built SVG sprite.

--- a/tsreact/styles/variables.scss
+++ b/tsreact/styles/variables.scss
@@ -4,3 +4,7 @@
 // (and other SCSS libraries) on each update.
 //
 @import "globals";
+
+// Also include Bootstrap variables for consistency.
+@import "~bootstrap/scss/functions";
+@import "~bootstrap/scss/variables";
