--- a/tsreact/styles/variables.scss
+++ b/tsreact/styles/variables.scss
@@ -9,8 +9,16 @@
 @import "~bootstrap/scss/functions";
 @import "~bootstrap/scss/variables";
 
+// Color Aliases
+$light: map-get($theme-colors, "light");
+$dark: map-get($theme-colors, "dark");
+
 // Main :: Root
 $root-xgap-screen-sm: 1rem;
 $root-title-height: 4rem;
-$root-title-color: map-get($theme-colors, "light");
-$root-title-bg: map-get($theme-colors, "dark");
+$root-title-color: $light;
+$root-title-bg: $dark;
+
+// Main :: Search
+$search-input-padding: 1rem;
+$search-input-border: $dark;
