react.ts Sample: displaying the records.

--- a/tsreact/styles/variables.scss
+++ b/tsreact/styles/variables.scss
@@ -22,3 +22,5 @@ $root-title-bg: $dark;
 // Main :: Search
 $search-input-padding: 1rem;
 $search-input-border: $dark;
+$search-record-even-bg: #f6f6f6;
+$search-record-odd-bg: #e2e2e2;
