--- a/tsreact/styles/variables.scss
+++ b/tsreact/styles/variables.scss
@@ -24,3 +24,6 @@ $search-input-padding: 1rem;
 $search-input-border: $dark;
 $search-record-even-bg: #f6f6f6;
 $search-record-odd-bg: #e2e2e2;
+$search-pager-item-size: 2rem;
+$search-pager-color: $dark;
+$search-pager-color-alt: $light;
