--- a/tsreact/src/main/screens/Search/Results/Item/styles.module.scss
+++ b/tsreact/src/main/screens/Search/Results/Item/styles.module.scss
@@ -1,4 +1,5 @@
 .searchRecord {
+  position: relative;
   padding: 0.5rem $root-xgap-screen-sm;
   margin: 0 (-$root-xgap-screen-sm);
 
@@ -21,5 +22,11 @@
   .address {
     margin-top: 0.5rem;
     font-size: 0.8em;
+  }
+
+  .showRecord {
+    position: absolute;
+    right: $root-xgap-screen-sm;
+    bottom: 0.5rem;
   }
 }
