migration Started migration to meet modern stuff...

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,8 +1,8 @@
 //
 // Variables defined for entire application and Bootstrap.
 //
-@import "fonts.json";
-@import "measures.json";
+@import "fontVars";
+@import "measures";
 
 //
 // Breakpoints & Grid System & Containers
