migration Changed embedded fonts from Roboto to Open Sans, fixed their build

--- a/styles/fontVars.scss
+++ b/styles/fontVars.scss
@@ -1,8 +1,5 @@
-$fontFamilyForCaptions: "Roboto; Verdana; sans-serif";
-$fontFamilyForTextSansSerif: "Verdana; sans-serif";
+$fontFamilyBase: "Open Sans", sans-serif;
+$fontFamilyHeadings: "Open Sans Condensed", sans-serif;
 $fontSizeBase: 1rem;
-$fontWeightThin: 100;
 $fontWeightLight: 300;
 $fontWeightNormal: 400;
-$fontWeightBolder: 500;
-$fontWeightBold: 700;
