--- a/styles/fonts.scss
+++ b/styles/fonts.scss
@@ -1,20 +1,23 @@
-// @import "../fonts/roboto/roboto-100i-cyrillic";
-// @import "../fonts/roboto/roboto-100i-latin";
-// @import "../fonts/roboto/roboto-100r-cyrillic";
-// @import "../fonts/roboto/roboto-100r-latin";
-// @import "../fonts/roboto/roboto-300i-cyrillic";
-// @import "../fonts/roboto/roboto-300i-latin";
-// @import "../fonts/roboto/roboto-300r-cyrillic";
-// @import "../fonts/roboto/roboto-300r-latin";
-// @import "../fonts/roboto/roboto-400i-cyrillic";
-// @import "../fonts/roboto/roboto-400i-latin";
-// @import "../fonts/roboto/roboto-400r-cyrillic";
-   @import "../fonts/roboto/roboto-400r-latin";
-// @import "../fonts/roboto/roboto-500i-cyrillic";
-// @import "../fonts/roboto/roboto-500i-latin";
-// @import "../fonts/roboto/roboto-500r-cyrillic";
-// @import "../fonts/roboto/roboto-500r-latin";
-// @import "../fonts/roboto/roboto-700i-cyrillic";
-// @import "../fonts/roboto/roboto-700i-latin";
-// @import "../fonts/roboto/roboto-700r-cyrillic";
-   @import "../fonts/roboto/roboto-700r-latin";
+@import "../fonts/open-sans/open-sans-300rc-greek.css";
+@import "../fonts/open-sans/open-sans-300rc-latin.css";
+@import "../fonts/open-sans/open-sans-300rc-sym.css";
+
+@mixin font-open-sans-300rc {
+  font-family: "Open Sans Condensed";
+  font-optical-sizing: auto;
+  font-weight: 300;
+  font-style: normal;
+  font-variation-settings: "wdth" 87.5;
+}
+
+@import "../fonts/open-sans/open-sans-400r-greek.css";
+@import "../fonts/open-sans/open-sans-400r-latin.css";
+@import "../fonts/open-sans/open-sans-400r-sym.css";
+
+@mixin font-open-sans-400r {
+  font-family: "Open Sans";
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+  font-variation-settings: "wdth" 100;
+}
