--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -40,18 +40,19 @@ $container-max-widths: (
 // Fonts
 //
 
-$font-family-sans-serif: $fontFamilyForCaptions;
-$font-family-base: $font-family-sans-serif;
+$font-family-sans-serif: $fontFamilyBase;
+$font-family-base: $fontFamilyBase;
+$headings-font-family: $fontFamilyHeadings;
 
 $font-size-base: $fontSizeBase;
 $font-weight-base: $fontWeightNormal;
 
-$font-weight-lighter: $fontWeightThin;
+// $font-weight-lighter: $fontWeightThin;
 $font-weight-light: $fontWeightLight;
 $font-weight-normal: $fontWeightNormal;
-$font-weight-bolder: $fontWeightBolder;
-$font-weight-bold: $fontWeightBold;
+// $font-weight-bolder: $fontWeightBolder;
+// $font-weight-bold: $fontWeightBold;
 
-$headings-font-weight: $font-weight-normal;
-$display-font-weight: $font-weight-light;
+$headings-font-weight: $font-weight-light;
+$display-font-weight: $font-weight-normal;
 $lead-font-weight: $font-weight-light;
