migration Implemented own SCSS importer for JSON variables (as it was with Node Sass Loaded)

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,8 +1,7 @@
 //
 // Variables defined for entire application and Bootstrap.
 //
-@import "fontVars";
-@import "measures";
+@import "vars.json";
 
 //
 // Breakpoints & Grid System & Containers
